// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should allow hiding 1`] = `
<DocumentFragment>
  <svg
    id="stage"
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      height="800"
      id="stage"
      width="800"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <g>
          <g>
            <rect
              class="not-in-focus"
              height="100%"
              id="chaos"
              width="100%"
            />
            <text
              class="area-label"
              id="label-chaos"
              text-anchor="middle"
              x="50%"
              y="20"
            >
              chaos
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="33%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="20%"
            >
              stretch
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="15%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="50%"
            >
              comfort
            </text>
          </g>
          <g
            class="appear"
            id="users"
          >
            <g
              class="user-group"
            >
              <rect
                class="not-in-focus"
                height="90"
                width="800"
                x="0"
                y="60"
              />
              <text
                class="username"
                x="60"
                y="120"
              >
                Adam Hall
              </text>
            </g>
            <g
              class="user-group"
            >
              <rect
                class="not-in-focus"
                height="90"
                width="800"
                x="0"
                y="150"
              />
              <text
                class="username"
                x="60"
                y="210"
              >
                Caroline Hall
              </text>
            </g>
          </g>
          <g
            id="history"
          />
        </g>
        ,
        <button
          id="show-tuckman"
        >
          show tuckman
        </button>
        ,
        <button
          id="hide-tuckman"
        >
          hide tuckman
        </button>
      </g>
    </svg>
  </svg>
</DocumentFragment>
`;

exports[`Should allow hiding 2`] = `
<DocumentFragment>
  <svg
    id="stage"
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      height="800"
      id="stage"
      width="800"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <g>
          <g>
            <rect
              class="not-in-focus"
              height="100%"
              id="chaos"
              width="100%"
            />
            <text
              class="area-label"
              id="label-chaos"
              text-anchor="middle"
              x="50%"
              y="20"
            >
              chaos
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="33%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="20%"
            >
              stretch
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="15%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="50%"
            >
              comfort
            </text>
          </g>
          <g
            class="appear"
            id="users"
          >
            <g
              class="user-group"
            >
              <rect
                class="not-in-focus"
                height="90"
                width="800"
                x="0"
                y="60"
              />
              <text
                class="username"
                x="60"
                y="120"
              >
                Adam Hall
              </text>
            </g>
            <g
              class="user-group"
            >
              <rect
                class="not-in-focus"
                height="90"
                width="800"
                x="0"
                y="150"
              />
              <text
                class="username"
                x="60"
                y="210"
              >
                Caroline Hall
              </text>
            </g>
          </g>
          <g
            id="history"
          />
        </g>
        ,
        <button
          id="show-tuckman"
        >
          show tuckman
        </button>
        ,
        <button
          id="hide-tuckman"
        >
          hide tuckman
        </button>
      </g>
    </svg>
  </svg>
</DocumentFragment>
`;

exports[`Should allow shrinking 1`] = `
<DocumentFragment>
  <svg
    id="stage"
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      height="800"
      id="stage"
      width="800"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <g>
          <g>
            <rect
              class="not-in-focus"
              height="100%"
              id="chaos"
              width="100%"
            />
            <text
              class="area-label"
              id="label-chaos"
              text-anchor="middle"
              x="50%"
              y="20"
            >
              chaos
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="33%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="20%"
            >
              stretch
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="15%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="50%"
            >
              comfort
            </text>
          </g>
          <g
            class="appear"
            id="users"
          >
            <g
              class="user-group"
            >
              <rect
                class="not-in-focus"
                height="90"
                width="800"
                x="0"
                y="60"
              />
              <text
                class="username"
                x="60"
                y="120"
              >
                Caroline Hall
              </text>
            </g>
          </g>
          <g
            id="history"
          >
            <circle
              class="point"
              cx="800"
              cy="400"
              r="10"
            />
          </g>
        </g>
        ,
        <button
          id="show-tuckman"
        >
          show tuckman
        </button>
        ,
        <button
          id="hide-tuckman"
        >
          hide tuckman
        </button>
      </g>
    </svg>
  </svg>
</DocumentFragment>
`;

exports[`Should allow shrinking 2`] = `
<DocumentFragment>
  <svg
    id="stage"
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      height="800"
      id="stage"
      width="800"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <g>
          <g>
            <rect
              class="not-in-focus"
              height="100%"
              id="chaos"
              width="100%"
            />
            <text
              class="area-label"
              id="label-chaos"
              text-anchor="middle"
              x="50%"
              y="20"
            >
              chaos
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="33%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="20%"
            >
              stretch
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="15%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="50%"
            >
              comfort
            </text>
          </g>
          <g
            class="disappear"
            id="users"
          />
          <g
            id="history"
          >
            <circle
              class="point"
              cx="800"
              cy="400"
              r="10"
            />
            <circle
              class="point"
              cx="-400"
              cy="399.99999999183456"
              r="10"
            />
          </g>
        </g>
        ,
        <button
          id="show-tuckman"
        >
          show tuckman
        </button>
        ,
        <button
          id="hide-tuckman"
        >
          hide tuckman
        </button>
      </g>
    </svg>
  </svg>
</DocumentFragment>
`;

exports[`Should allow users to be set okay 1`] = `
<DocumentFragment>
  <svg
    id="stage"
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      height="800"
      id="stage"
      width="800"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <g>
          <g>
            <rect
              class="not-in-focus"
              height="100%"
              id="chaos"
              width="100%"
            />
            <text
              class="area-label"
              id="label-chaos"
              text-anchor="middle"
              x="50%"
              y="20"
            >
              chaos
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="33%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="20%"
            >
              stretch
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="15%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="50%"
            >
              comfort
            </text>
          </g>
          <g
            class="disappear"
            id="users"
          >
            <g
              class="user-group"
            >
              <rect
                height="90"
                width="800"
                x="0"
                y="60"
              />
              <text
                class="username"
                x="60"
                y="120"
              >
                Test person 1
              </text>
            </g>
            <g
              class="user-group"
            >
              <rect
                height="90"
                width="800"
                x="0"
                y="150"
              />
              <text
                class="username"
                x="60"
                y="210"
              >
                Test person 2
              </text>
            </g>
            <g
              class="user-group"
            >
              <rect
                height="90"
                width="800"
                x="0"
                y="240"
              />
              <text
                class="username"
                x="60"
                y="300"
              >
                Test person 3
              </text>
            </g>
          </g>
          <g
            id="history"
          />
        </g>
        ,
        <button
          id="show-tuckman"
        >
          show tuckman
        </button>
        ,
        <button
          id="hide-tuckman"
        >
          hide tuckman
        </button>
      </g>
    </svg>
  </svg>
</DocumentFragment>
`;

exports[`Should show the component 1`] = `
<DocumentFragment>
  <svg
    id="stage"
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      height="800"
      id="stage"
      width="800"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <g>
          <g>
            <rect
              class="not-in-focus"
              height="100%"
              id="chaos"
              width="100%"
            />
            <text
              class="area-label"
              id="label-chaos"
              text-anchor="middle"
              x="50%"
              y="20"
            >
              chaos
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="33%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="20%"
            >
              stretch
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="15%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="50%"
            >
              comfort
            </text>
          </g>
          <g
            class="appear"
            id="users"
          >
            <g
              class="user-group"
            >
              <rect
                class="not-in-focus"
                height="90"
                width="800"
                x="0"
                y="60"
              />
              <text
                class="username"
                x="60"
                y="120"
              >
                Adam Hall
              </text>
            </g>
            <g
              class="user-group"
            >
              <rect
                class="not-in-focus"
                height="90"
                width="800"
                x="0"
                y="150"
              />
              <text
                class="username"
                x="60"
                y="210"
              >
                Caroline Hall
              </text>
            </g>
          </g>
          <g
            id="history"
          />
        </g>
        ,
        <button
          id="show-tuckman"
        >
          show tuckman
        </button>
        ,
        <button
          id="hide-tuckman"
        >
          hide tuckman
        </button>
      </g>
    </svg>
  </svg>
</DocumentFragment>
`;

exports[`Should show the component 2`] = `
<DocumentFragment>
  <svg
    id="stage"
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      height="800"
      id="stage"
      width="800"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <g>
          <g>
            <rect
              class="not-in-focus"
              height="100%"
              id="chaos"
              width="100%"
            />
            <text
              class="area-label"
              id="label-chaos"
              text-anchor="middle"
              x="50%"
              y="20"
            >
              chaos
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="33%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="20%"
            >
              stretch
            </text>
          </g>
          <g>
            <circle
              class="not-in-focus"
              cx="50%"
              cy="50%"
              height="50%"
              id="stretch"
              r="15%"
              width="50%"
            />
            <text
              class="area-label"
              id="label-stretch"
              text-anchor="middle"
              x="50%"
              y="50%"
            >
              comfort
            </text>
          </g>
          <g
            class="appear"
            id="users"
          >
            <g
              class="user-group"
            >
              <rect
                class="in-focus"
                height="90"
                width="800"
                x="0"
                y="60"
              />
              <text
                class="username"
                x="60"
                y="120"
              >
                Adam Hall
              </text>
            </g>
            <g
              class="user-group"
            >
              <rect
                class="not-in-focus"
                height="90"
                width="800"
                x="0"
                y="150"
              />
              <text
                class="username"
                x="60"
                y="210"
              >
                Caroline Hall
              </text>
            </g>
          </g>
          <g
            id="history"
          />
        </g>
        ,
        <button
          id="show-tuckman"
        >
          show tuckman
        </button>
        ,
        <button
          id="hide-tuckman"
        >
          hide tuckman
        </button>
      </g>
    </svg>
  </svg>
</DocumentFragment>
`;
